bynkc/tests/fixtures/positive/109_test_with_opaque_construction/src/commerce/payment.bynk
context commerce.payment {
  exports opaque { AuthId }

  type AuthId = opaque String
}
