bynkc/tests/fixtures/negative/53_consumes_a_commons/src/commerce/orders.bynk
context commerce.orders {
  consumes commerce.money
}
